# ClaudeEx3

./: .gitignore  CMakeLists.txt
components/example_lib/: CMakeLists.txt  example_lib.cpp
components/example_lib/include/: example_lib.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_example_lib.cpp
